syntax = "proto3";

option csharp_namespace = "gRPCServer.Protos";

package Member;

// The greeting service definition.
service MemberData {
  // Sends a greeting
  rpc GetMemberData (GetMemberRequest) returns (GetMemberResponse);
}

// The request message containing the user's name.
message GetMemberRequest {
  string memberId  = 1;
}

// The response message containing the greetings.
message GetMemberResponse {
  Member member = 1;
  int32 StatusCode = 2;
  bool GetSuccessful = 3;
}

message Member {
	string FirstName = 1;
	string Lastname = 2;
	string SSN = 3;
	string City = 4;
	string State = 5;
	string MemberId = 6;
}
